########### next target ###############

SET(g3dlite_STAT_SRCS
			AABox.cpp
			Any.cpp
			AnyVal.cpp
			AreaMemoryManager.cpp
			BinaryFormat.cpp
			BinaryInput.cpp
			BinaryOutput.cpp
			Box.cpp
			Box2D.cpp
			BumpMapPreprocess.cpp
			Capsule.cpp
			CollisionDetection.cpp
			Color1.cpp
			Color1uint8.cpp
			Color3.cpp
			Color3uint8.cpp
			Color4.cpp
			Color4uint8.cpp
			Cone.cpp
			constants.cpp
			ConvexPolyhedron.cpp
			CoordinateFrame.cpp
			Crypto.cpp
			Crypto_md5.cpp
			Cylinder.cpp
			debugAssert.cpp
			fileutils.cpp
			filter.cpp
			format.cpp
			g3dfnmatch.cpp
			g3dmath.cpp
			GLight.cpp
			GThread.cpp
			GUniqueID.cpp
			Intersect.cpp
			license.cpp
			Line.cpp
			LineSegment.cpp
			Log.cpp
			Matrix.cpp
			Matrix3.cpp
			Matrix4.cpp
			MemoryManager.cpp
			MeshAlg.cpp
			MeshAlgAdjacency.cpp
			MeshAlgWeld.cpp
			MeshBuilder.cpp
			NetAddress.cpp
			NetworkDevice.cpp
			PhysicsFrame.cpp
			Plane.cpp
			PrecomputedRandom.cpp
			prompt.cpp
			Quat.cpp
			Random.cpp
			Ray.cpp
			Rect2D.cpp
			ReferenceCount.cpp
			RegistryUtil.cpp
			Sphere.cpp
			SplineBase.cpp
			stringutils.cpp
			System.cpp
			TextInput.cpp
			TextOutput.cpp
			ThreadSet.cpp
			Triangle.cpp
			uint128.cpp
			UprightFrame.cpp
			Vector2.cpp
			Vector2int16.cpp
			Vector3.cpp
			Vector3int16.cpp
			Vector3int32.cpp
			Vector4.cpp
			Vector4int8.cpp
			Welder.cpp
			WinMain.cpp
)

add_library(g3dlite STATIC ${g3dlite_STAT_SRCS})


########### install files ###############
