
########### next target ###############

SET(trinityscript_LIB_SRCS
   ScriptMgr.cpp
   ScriptMgr.h
   include/precompiled.cpp
   include/precompiled.h
   include/sc_creature.cpp
   include/sc_creature.h
   include/sc_gossip.h
   include/sc_instance.h
   scripts/boss/boss_emeriss.cpp
   scripts/boss/boss_lethon.cpp
   scripts/boss/boss_taerar.cpp
   scripts/boss/boss_ysondre.cpp
   scripts/creature/mob_generic_creature.cpp
   scripts/creature/simple_ai.cpp
   scripts/creature/simple_ai.h
   scripts/go/go_scripts.cpp
   scripts/guard/guard_ai.cpp
   scripts/guard/guard_ai.h
   scripts/guard/guards.cpp
   scripts/item/item_scripts.cpp
   scripts/npc/npc_escortAI.cpp
   scripts/npc/npc_escortAI.h
   scripts/npc/npc_innkeeper.cpp
   scripts/npc/npcs_special.cpp
   scripts/zone/arathi_highlands/arathi_highlands.cpp
   scripts/zone/alterac_mountains/alterac_mountains.cpp
   scripts/zone/ashenvale_forest/ashenvale.cpp
   scripts/zone/azshara/azshara.cpp
   scripts/zone/azshara/boss_azuregos.cpp
   scripts/zone/barrens/the_barrens.cpp
   scripts/zone/blackrock_depths/blackrock_depths.cpp 
   scripts/zone/blackrock_depths/boss_ambassador_flamelash.cpp 
   scripts/zone/blackrock_depths/boss_anubshiah.cpp 
   scripts/zone/blackrock_depths/boss_emperor_dagran_thaurissan.cpp 
   scripts/zone/blackrock_depths/boss_general_angerforge.cpp 
   scripts/zone/blackrock_depths/boss_gorosh_the_dervish.cpp
   scripts/zone/blackrock_depths/boss_grizzle.cpp 
   scripts/zone/blackrock_depths/boss_high_interrogator_gerstahn.cpp 
   scripts/zone/blackrock_depths/boss_magmus.cpp 
   scripts/zone/blackrock_depths/boss_moira_bronzebeard.cpp 
   scripts/zone/blackrock_depths/boss_tomb_of_seven.cpp 
   scripts/zone/blackrock_depths/def_blackrock_depths.h 
   scripts/zone/blackrock_depths/instance_blackrock_depths.cpp 
   scripts/zone/blackrock_spire/boss_drakkisath.cpp
   scripts/zone/blackrock_spire/boss_gyth.cpp
   scripts/zone/blackrock_spire/boss_halycon.cpp
   scripts/zone/blackrock_spire/boss_highlord_omokk.cpp
   scripts/zone/blackrock_spire/boss_mother_smolderweb.cpp
   scripts/zone/blackrock_spire/boss_overlord_wyrmthalak.cpp
   scripts/zone/blackrock_spire/boss_pyroguard_emberseer.cpp
   scripts/zone/blackrock_spire/boss_quartermaster_zigris.cpp
   scripts/zone/blackrock_spire/boss_rend_blackhand.cpp
   scripts/zone/blackrock_spire/boss_shadow_hunter_voshgajin.cpp
   scripts/zone/blackrock_spire/boss_the_beast.cpp
   scripts/zone/blackrock_spire/boss_warmaster_voone.cpp
   scripts/zone/blackwing_lair/boss_broodlord_lashlayer.cpp
   scripts/zone/blackwing_lair/boss_chromaggus.cpp
   scripts/zone/blackwing_lair/boss_ebonroc.cpp
   scripts/zone/blackwing_lair/boss_firemaw.cpp
   scripts/zone/blackwing_lair/boss_flamegor.cpp
   scripts/zone/blackwing_lair/boss_nefarian.cpp
   scripts/zone/blackwing_lair/boss_razorgore.cpp
   scripts/zone/blackwing_lair/boss_vaelastrasz.cpp
   scripts/zone/blackwing_lair/boss_victor_nefarius.cpp
   scripts/zone/blackwing_lair/instance_blackwing_lair.cpp
   scripts/zone/blasted_lands/blasted_lands.cpp
   scripts/zone/blasted_lands/boss_kruul.cpp
   scripts/zone/burning_steppes/burning_steppes.cpp
   scripts/zone/darkshore/darkshore.cpp
   scripts/zone/deadmines/def_deadmines.h
   scripts/zone/deadmines/deadmines.cpp
   scripts/zone/dun_morogh/dun_morogh.cpp
   scripts/zone/dustwallow_marsh/dustwallow_marsh.cpp
   scripts/zone/eastern_plaguelands/eastern_plaguelands.cpp
   scripts/zone/elwynn_forest/elwynn_forest.cpp
   scripts/zone/felwood/felwood.cpp
   scripts/zone/feralas/feralas.cpp
   scripts/zone/ironforge/ironforge.cpp
   scripts/zone/loch_modan/loch_modan.cpp
   scripts/zone/maraudon/boss_celebras_the_cursed.cpp
   scripts/zone/maraudon/boss_landslide.cpp
   scripts/zone/maraudon/boss_noxxion.cpp
   scripts/zone/maraudon/boss_princess_theradras.cpp
   scripts/zone/molten_core/boss_baron_geddon.cpp
   scripts/zone/molten_core/boss_garr.cpp
   scripts/zone/molten_core/boss_gehennas.cpp
   scripts/zone/molten_core/boss_golemagg.cpp
   scripts/zone/molten_core/boss_lucifron.cpp
   scripts/zone/molten_core/boss_magmadar.cpp
   scripts/zone/molten_core/boss_majordomo_executus.cpp
   scripts/zone/molten_core/boss_ragnaros.cpp
   scripts/zone/molten_core/boss_shazzrah.cpp
   scripts/zone/molten_core/boss_sulfuron_harbinger.cpp
   scripts/zone/molten_core/def_molten_core.h
   scripts/zone/molten_core/instance_molten_core.cpp
   scripts/zone/molten_core/molten_core.cpp
   scripts/zone/moonglade/moonglade.cpp
   scripts/zone/mulgore/mulgore.cpp
   scripts/zone/naxxramas/boss_anubrekhan.cpp
   scripts/zone/naxxramas/boss_faerlina.cpp
   scripts/zone/naxxramas/boss_gluth.cpp
   scripts/zone/naxxramas/boss_gothik.cpp
   scripts/zone/naxxramas/boss_grobbulus.cpp
   scripts/zone/naxxramas/boss_heigan.cpp
   scripts/zone/naxxramas/boss_highlord_mograine.cpp
   scripts/zone/naxxramas/boss_kelthuzad.cpp
   scripts/zone/naxxramas/boss_four_horsemen.cpp
   scripts/zone/naxxramas/boss_loatheb.cpp
   scripts/zone/naxxramas/boss_maexxna.cpp
   scripts/zone/naxxramas/boss_noth.cpp
   scripts/zone/naxxramas/boss_patchwerk.cpp
   scripts/zone/naxxramas/boss_razuvious.cpp
   scripts/zone/naxxramas/boss_sapphiron.cpp
   scripts/zone/naxxramas/boss_thaddius.cpp
   scripts/zone/naxxramas/instance_naxxramas.cpp
   scripts/zone/onyxias_lair/boss_onyxia.cpp
   scripts/zone/orgrimmar/orgrimmar.cpp
   scripts/zone/razorfen_downs/boss_amnennar_the_coldbringer.cpp
   scripts/zone/razorfen_kraul/razorfen_kraul.cpp  
   scripts/zone/ruins_of_ahnqiraj/boss_ayamiss.cpp
   scripts/zone/ruins_of_ahnqiraj/boss_buru.cpp
   scripts/zone/ruins_of_ahnqiraj/boss_kurinnaxx.cpp
   scripts/zone/ruins_of_ahnqiraj/boss_moam.cpp
   scripts/zone/ruins_of_ahnqiraj/boss_ossirian.cpp
   scripts/zone/ruins_of_ahnqiraj/boss_rajaxx.cpp
   scripts/zone/ruins_of_ahnqiraj/instance_ruins_of_ahnqiraj.cpp
   scripts/zone/scarlet_monastery/boss_arcanist_doan.cpp
   scripts/zone/scarlet_monastery/boss_azshir_the_sleepless.cpp
   scripts/zone/scarlet_monastery/boss_bloodmage_thalnos.cpp
   scripts/zone/scarlet_monastery/boss_herod.cpp
   scripts/zone/scarlet_monastery/boss_high_inquisitor_fairbanks.cpp
   scripts/zone/scarlet_monastery/boss_houndmaster_loksey.cpp
   scripts/zone/scarlet_monastery/boss_interrogator_vishas.cpp
   scripts/zone/scarlet_monastery/boss_mograine_and_whitemane.cpp
   scripts/zone/scarlet_monastery/instance_scarlet_monastery.cpp
   scripts/zone/scarlet_monastery/def_scarlet_monastery.h
   scripts/zone/scholomance/boss_darkmaster_gandling.cpp
   scripts/zone/scholomance/boss_death_knight_darkreaver.cpp
   scripts/zone/scholomance/boss_doctor_theolen_krastinov.cpp
   scripts/zone/scholomance/boss_illucia_barov.cpp
   scripts/zone/scholomance/boss_instructor_malicia.cpp
   scripts/zone/scholomance/boss_jandice_barov.cpp
   scripts/zone/scholomance/boss_kormok.cpp
   scripts/zone/scholomance/boss_lord_alexei_barov.cpp
   scripts/zone/scholomance/boss_lorekeeper_polkelt.cpp
   scripts/zone/scholomance/boss_ras_frostwhisper.cpp
   scripts/zone/scholomance/boss_the_ravenian.cpp
   scripts/zone/scholomance/boss_vectus.cpp
   scripts/zone/scholomance/def_scholomance.h
   scripts/zone/scholomance/instance_scholomance.cpp
   scripts/zone/searing_gorge/searing_gorge.cpp
   scripts/zone/shadowfang_keep/def_shadowfang_keep.h
   scripts/zone/shadowfang_keep/instance_shadowfang_keep.cpp
   scripts/zone/shadowfang_keep/shadowfang_keep.cpp
   scripts/zone/silithus/silithus.cpp
   scripts/zone/silverpine_forest/silverpine_forest.cpp
   scripts/zone/stonetalon_mountains/stonetalon_mountains.cpp
   scripts/zone/stormwind/stormwind_city.cpp
   scripts/zone/stranglethorn_vale/stranglethorn_vale.cpp
   scripts/zone/stratholme/boss_baron_rivendare.cpp
   scripts/zone/stratholme/boss_baroness_anastari.cpp
   scripts/zone/stratholme/boss_cannon_master_willey.cpp
   scripts/zone/stratholme/boss_dathrohan_balnazzar.cpp
   scripts/zone/stratholme/boss_magistrate_barthilas.cpp
   scripts/zone/stratholme/boss_maleki_the_pallid.cpp
   scripts/zone/stratholme/boss_nerubenkan.cpp
   scripts/zone/stratholme/boss_postmaster_malown.cpp
   scripts/zone/stratholme/boss_ramstein_the_gorger.cpp
   scripts/zone/stratholme/boss_timmy_the_cruel.cpp
   scripts/zone/stratholme/def_stratholme.h
   scripts/zone/stratholme/instance_stratholme.cpp
   scripts/zone/stratholme/stratholme.cpp
   scripts/zone/tanaris/tanaris.cpp
   scripts/zone/temple_of_ahnqiraj/boss_bug_trio.cpp
   scripts/zone/temple_of_ahnqiraj/boss_cthun.cpp
   scripts/zone/temple_of_ahnqiraj/boss_fankriss.cpp
   scripts/zone/temple_of_ahnqiraj/boss_huhuran.cpp
   scripts/zone/temple_of_ahnqiraj/boss_ouro.cpp
   scripts/zone/temple_of_ahnqiraj/boss_sartura.cpp
   scripts/zone/temple_of_ahnqiraj/boss_skeram.cpp
   scripts/zone/temple_of_ahnqiraj/boss_twinemperors.cpp
   scripts/zone/temple_of_ahnqiraj/boss_viscidus.cpp
   scripts/zone/temple_of_ahnqiraj/def_temple_of_ahnqiraj.h
   scripts/zone/temple_of_ahnqiraj/instance_temple_of_ahnqiraj.cpp
   scripts/zone/temple_of_ahnqiraj/mob_anubisath_sentinel.cpp
   scripts/zone/thunder_bluff/thunder_bluff.cpp
   scripts/zone/tirisfal_glades/tirisfal_glades.cpp
   scripts/zone/thousand_needles/thousand_needles.cpp
   scripts/zone/uldaman/boss_archaedas.cpp
   scripts/zone/uldaman/instance_uldaman.cpp
   scripts/zone/uldaman/boss_ironaya.cpp
   scripts/zone/uldaman/uldaman.cpp
   scripts/zone/undercity/undercity.cpp
   scripts/zone/ungoro_crater/ungoro_crater.cpp
   scripts/zone/wailing_caverns/instance_wailing_caverns.cpp
   scripts/zone/western_plaguelands/western_plaguelands.cpp
   scripts/zone/westfall/westfall.cpp
   scripts/zone/winterspring/winterspring.cpp
   scripts/zone/zulfarrak/zulfarrak.cpp
   scripts/zone/zulgurub/boss_arlokk.cpp
   scripts/zone/zulgurub/boss_gahzranka.cpp
   scripts/zone/zulgurub/boss_grilek.cpp
   scripts/zone/zulgurub/boss_hakkar.cpp
   scripts/zone/zulgurub/boss_hazzarah.cpp
   scripts/zone/zulgurub/boss_jeklik.cpp
   scripts/zone/zulgurub/boss_jindo.cpp
   scripts/zone/zulgurub/boss_mandokir.cpp
   scripts/zone/zulgurub/boss_marli.cpp
   scripts/zone/zulgurub/boss_renataki.cpp
   scripts/zone/zulgurub/boss_thekal.cpp
   scripts/zone/zulgurub/boss_venoxis.cpp
   scripts/zone/zulgurub/boss_wushoolay.cpp
   scripts/zone/zulgurub/def_zulgurub.h
   scripts/zone/zulgurub/instance_zulgurub.cpp
   system/ScriptLoader.cpp
   system/ScriptLoader.h
   system/system.cpp
   system/system.h
)

add_library(trinityscript SHARED ${trinityscript_LIB_SRCS})

add_definitions(-D_TRINITY_SCRIPT_CONFIG='"${CONF_DIR}/trinitycore.conf"')

IF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    SET_TARGET_PROPERTIES(trinityscript PROPERTIES LINK_FLAGS "-flat_namespace -undefined suppress")
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Darwin")

target_link_libraries(trinityscript)

set_target_properties(trinityscript PROPERTIES VERSION 4.2.0 SOVERSION 4)
install(TARGETS trinityscript DESTINATION lib)

